<resources>
    <string name="app_name">Digital Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Digital Tour Guide</string>
    <string name="nav_header_subtitle">This is an awesome Tour Guide App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tour">Tour</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Password wiederholen</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Willkommen "</string>
    <string name="register_success">"Registrierung erfolgreich! "</string>
    <string name="register_failed">"Registrierung fehlgeschlagen! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_repeated_password">Password does not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Registrieren</string>
    <string name="prompt_username">Username</string>
    <string name="register">Registrieren</string>
    <string name="login">Anmelden</string>

    <!-- Strings related to TourDetail -->
    <string name="description_header">Beschreibung</string>
    <string name="points_of_interest_header">Points of Interest</string>
    <string name="tour_preview">Tour Preview</string>
    <string name="description_dummy">Eine Tour welche die besten und schönsten Kirchen der Stadt besucht.</string>

    <string name="last_tour_text">Last Tour</string>
    <string name="map_preview_description">Map Preview</string>
    <string name="start_text">It\'s time to start a Tour!</string>
    <string name="button_select_a_tour_text">Select a Tour</string>
    <string name="start_tour_text">Start</string>
    <string name="start_the_tour">Start the Tour</string>
    <string name="logout_text">Logout</string>
    <string name="hint_title">Titel</string>
    <string name="hint_description">Beschreibung</string>
    <string name="menu_routs">Routen</string>

    <string name="menu_tour_list">Touren</string>
    <string name="poi_preview">Vorschau</string>
    <string name="rating_header">Bewertung</string>

    <string name="URL">https://review-develop-3zknud.cityguide.sart.solutions/</string>
    <string name="satellite_string">Satellite</string>
    <string name="preview_of_the_tour">Preview of the Tour</string>
    <string name="rate_route_text">Route bewerten</string>
    <string name="duration_icon_description">Duration Icon</string>
</resources>