<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.hm.digitaltourguide.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_maps"
        android:name="edu.hm.digitaltourguide.ui.maps.MapsFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.hm.digitaltourguide.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_login"
        android:name="edu.hm.digitaltourguide.ui.signIn.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="edu.hm.digitaltourguide.ui.signIn.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>
    <fragment
        android:id="@+id/tourDetailFragment"
        android:name="edu.hm.digitaltourguide.ui.tour.TourDetailFragment"
        android:label="Tour"
        tools:layout="@layout/fragment_tour_detail" />
</navigation>