<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/trip_image_slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:auto_cycle="true"
                app:corner_radius="5"
                app:delay="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:period="2000"></com.denzcoskun.imageslider.ImageSlider>


            <TextView
                android:id="@+id/description_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/description_header"
                android:textSize="@dimen/tour_detail_header_text_size"
                app:layout_constraintTop_toBottomOf="@+id/trip_image_slider" />

            <TextView
                android:id="@+id/tour_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_header"
                tools:text="@string/decription_dummy"/>

            <TextView
                android:id="@+id/poi_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tour_detail_margin_top"
                android:text="@string/points_of_interest_header"
                android:textSize="@dimen/tour_detail_header_text_size"
                app:layout_constraintTop_toBottomOf="@+id/tour_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/poi_list_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="300dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/poi_header" />

            <TextView
                android:id="@+id/map_preview_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tour_detail_margin_top"
                android:text="@string/tour_preview"
                android:textSize="@dimen/tour_detail_header_text_size"
                app:layout_constraintTop_toBottomOf="@+id/poi_list_recycler" />

            // TODO: implement Tour preview
            <ImageView
                android:id="@+id/tour_preview_map"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map_preview_header" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>